--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -3,71 +3,271 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Thống kê</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href=".\css\tab.css">
-
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <title>Kết quả</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <link rel="stylesheet"
+          href=".\css\tab.css">
+    <link rel="stylesheet"
+          href=".\css\result.css">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+          rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          rel="stylesheet">
+    <link rel="stylesheet"
+          href=".\css\style.css">
+    <link rel="stylesheet"
+          href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet"
+          href="/resources/demos/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href=".\css\style.css">
+
+    <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
+    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 </head>
 
 
 <body>
     <!-- Header -->
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-        <a class="navbar-brand" href=".\index-ctsa.html">
-            <img src="./images/logoctsa.png" width="90" height="30" class="d-inline-block align-top" alt="CTSA logo">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark"
+         style="height: 45px">
+        <a class="navbar-brand"
+           href=".\index-ctsa.html">
+            <img src="./images/logoctsa.png"
+                 width="90"
+                 height="30"
+                 class="d-inline-block align-top"
+                 alt="CTSA logo">
         </a>
 
 
-        <div class="collapse navbar-collapse justify-content-center menu " id="navbarSupportedContent">
-            <a class="mx-5" href="#">Tuyển Dụng</a>
-            <a class="mx-5" href=".\graph.html">Thống Kê</a>
-            <a class="mx-5" href="#">Tuyển Dụng</a>
-            <a class="mx-5" href="#">Thống Kê</a>
+        <div class="collapse navbar-collapse justify-content-center menu "
+             id="navbarSupportedContent">
+            <a class="mx-5"
+               href="#">Tuyển Dụng</a>
+            <a class="mx-5"
+               href=".\graph.html">Thống Kê</a>
+            <a class="mx-5"
+               href="#">Tuyển Dụng</a>
+            <a class="mx-5"
+               href="#">Thống Kê</a>
 
         </div>
         <span class="fa-stack">
-            <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+            <i class="	fa fa-user-circle-o fa-stack-1x"
+               style="font-size:36px; color:white"></i>
         </span>
     </nav>
     <!-- End of Header -->
     <div class="container">
-        <div id="content" class="tab-content col-md-12 folder py-3 px-5">
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <div class=" banner" style=" height:600px;width:300px; padding-top:15% ">
-                        <span class="fa fa-star"style="font-size: 45px; color:#ff6414">
-                           
-                        </span><br><br><br>
-                        <b style="color:rgb(241, 236, 236); font-size:3em">Developer</b><br><br>
-                        <div class="card">
-                            <span class="card-body">
-                                Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
-                                cứu,
-                                thiết kế, lập trình, kiểm thử phần mềm.
-                            </span>
+        <div id="content-result"
+             class="tab-content col-md-12 folder">
+            <div class="text-center pt-5">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                            </ul>
-                        </div>
-                       
+                <!-- Button trigger modal -->
+                <button type="button"
+                        class="btn btn-dark"
+                        data-toggle="modal"
+                        data-target="#exampleModal">
+                    Nhập chi tiết
+                </button>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-md-3 text-center result">
+                    <span class="fa fa-star"
+                          style="font-size: 45px; color:#ff6414">
 
-                    </div>
+                    </span><br><br>
+                    <b style="color:rgb(241, 236, 236); font-size:2.7em">Developer</b><br><br>
+
+                    <span>
+                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
+                        cứu,
+                        thiết kế, lập trình, kiểm thử phần mềm.
+                    </span>
                 </div>
-                <div class="col-md-9 text-center"><span style="font-size: 45px">Chào bạn, bạn hợp với ngành này nè</span></div>
+                <div class="col-md-3 text-center result">
+                    <span class="fa fa-star"
+                          style="font-size: 45px; color:#ff6414">
+
+                    </span><br><br>
+                    <b style="color:rgb(241, 236, 236); font-size:2.7em">Tester</b><br><br>
+
+                    <span>
+                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
+                        cứu,
+                        thiết kế, lập trình, kiểm thử phần mềm.
+                    </span>
+                </div>
+                <div class="col-md-3 text-center result">
+                    <span class="fa fa-star"
+                          style="font-size: 45px; color:#ff6414">
+
+                    </span><br><br>
+                    <b style="color:rgb(241, 236, 236); font-size:2.7em">QA</b><br><br>
+                    <span>
+                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
+                        cứu,
+                        thiết kế, lập trình, kiểm thử phần mềm.
+                    </span>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade"
+         id="exampleModal"
+         tabindex="-1"
+         role="dialog"
+         aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg"
+             role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"
+                        id="exampleModalLabel">Modal title</h5>
+                    <button type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        <label for="amount">Toán học:</label>
+                        <section class="range-slider">
+                            <span class="rangeValues"></span>
+                            <input value="5"
+                                   min="0"
+                                   max="10"
+                                   step="0.1"
+                                   type="range">
+                            <input value="10"
+                                   min="0"
+                                   max="10"
+                                   step="0.1"
+                                   type="range">
+                        </section>
+                        <span>
+                            Ngữ Văn
+                        </span>
+                        <span id="literScore"
+                              style="color:red; font-size:1.2em"></span>
+                        <span>điểm</span>
+                        <br>
+                        <div class="slidecontainer">
+                            <input type="range"
+                                   min="1"
+                                   max="10"
+                                   value="5"
+                                   step="0.1"
+                                   class="slider"
+                                   id="literRange">
+                        </div>
+
+                        <span>
+                            Anh Văn
+                        </span>
+                        <span id="englishScore"
+                              style="color:red; font-size:1.2em"></span>
+                        <span>điểm</span><br>
+                        <div class="slidecontainer">
+                            <input type="range"
+                                   min="1"
+                                   max="10"
+                                   value="5"
+                                   step="0.1"
+                                   class="slider"
+                                   id="englishRange">
+                        </div>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button"
+                            class="btn btn-secondary"
+                            data-dismiss="modal">Huỷ</button>
+                    <button type="button"
+                            class="btn selected">Nhận thêm gợi ý</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <script>
+        var mathSlider = document.getElementById("mathRange");
+        var literSlider = document.getElementById("literRange");
+        var engSlider = document.getElementById("englishRange");
+
+        var math = document.getElementById("mathScore");
+        var liter = document.getElementById("literScore");
+        var english = document.getElementById("englishScore");
+        math.innerHTML = mathSlider.value; // Display the default slider value
+        liter.innerHTML = literSlider.value;
+        english.innerHTML = engSlider.value;
+
+        // Update the current slider value (each time you drag the slider handle)
+        mathSlider.oninput = function () {
+            math.value = this.value;
+        }
+        literSlider.oninput = function () {
+            liter.innerHTML = this.value;
+        }
+        engSlider.oninput = function () {
+            english.innerHTML = this.value;
+        }
+    </script> -->
+    <script>
+        function getVals() {
+            // Get slider values
+            var parent = this.parentNode;
+            var slides = parent.getElementsByTagName("input");
+            var slide1 = parseFloat(slides[0].value);
+            var slide2 = parseFloat(slides[1].value);
+            // Neither slider will clip the other, so make sure we determine which is larger
+            if (slide1 > slide2) { var tmp = slide2; slide2 = slide1; slide1 = tmp; }
+
+            var displayElement = parent.getElementsByClassName("rangeValues")[0];
+            displayElement.innerHTML = slide1 + " - " + slide2;
+
+            //value to store range value
+            var value = [slide1, slide2];
+            // console.log(value);
+        }
+
+
+        window.onload = function () {
+            // Initialize Sliders
+            var sliderSections = document.getElementsByClassName("range-slider");
+            for (var x = 0; x < sliderSections.length; x++) {
+                var sliders = sliderSections[x].getElementsByTagName("input");
+                for (var y = 0; y < sliders.length; y++) {
+                    if (sliders[y].type === "range") {
+                        sliders[y].oninput = getVals;
+                        // Manually trigger event first time to display values
+                        sliders[y].oninput();
+                    }
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
