--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -31,8 +31,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
 
-    <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
-    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 </head>
 
 
@@ -73,11 +71,8 @@
         <div id="content-result"
              class="tab-content col-md-12 folder">
             <div class="text-center pt-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2>Chào bạn!</h2>
+                <h4>Đây là các ngành nghề phù hợp dựa theo thông tin bạn cung cấp.</h4>
 
                 <!-- Button trigger modal -->
                 <button type="button"
@@ -88,43 +83,17 @@
                 </button>
             </div>
             <div class="row justify-content-around">
-                <div class="col-md-3 text-center result">
-                    <span class="fa fa-star"
-                          style="font-size: 45px; color:#ff6414">
+                <div id="suggest2"
+                     class="col-md-3 text-center result">
 
-                    </span><br><br>
-                    <b style="color:rgb(241, 236, 236); font-size:2.7em">Developer</b><br><br>
-
-                    <span>
-                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
-                        cứu,
-                        thiết kế, lập trình, kiểm thử phần mềm.
-                    </span>
                 </div>
-                <div class="col-md-3 text-center result">
-                    <span class="fa fa-star"
-                          style="font-size: 45px; color:#ff6414">
+                <div id="suggest1"
+                     class="col-md-3 text-center result">
 
-                    </span><br><br>
-                    <b style="color:rgb(241, 236, 236); font-size:2.7em">Tester</b><br><br>
-
-                    <span>
-                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
-                        cứu,
-                        thiết kế, lập trình, kiểm thử phần mềm.
-                    </span>
                 </div>
-                <div class="col-md-3 text-center result">
-                    <span class="fa fa-star"
-                          style="font-size: 45px; color:#ff6414">
+                <div id="suggest3"
+                     class="col-md-3 text-center result">
 
-                    </span><br><br>
-                    <b style="color:rgb(241, 236, 236); font-size:2.7em">QA</b><br><br>
-                    <span>
-                        Một Software Developer là người có khả năng về các khía cạnh phần mềm bao gồm: nghiên
-                        cứu,
-                        thiết kế, lập trình, kiểm thử phần mềm.
-                    </span>
                 </div>
             </div>
         </div>
@@ -142,7 +111,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title"
-                        id="exampleModalLabel">Modal title</h5>
+                        id="exampleModalLabel">Hãy nhập điểm của bạn</h5>
                     <button type="button"
                             class="close"
                             data-dismiss="modal"
@@ -154,7 +123,7 @@
                     <p>
                         <label for="amount">Toán học:</label>
                         <section class="range-slider">
-                            <span class="rangeValues"></span>
+                            <span class="rangeValues"></span><br>
                             <input value="5"
                                    min="0"
                                    max="10"
@@ -247,7 +216,7 @@
             var displayElement = parent.getElementsByClassName("rangeValues")[0];
             displayElement.innerHTML = slide1 + " - " + slide2;
 
-            //value to store range value
+            //variable to store range value
             var value = [slide1, slide2];
             // console.log(value);
         }
@@ -265,6 +234,58 @@
                         sliders[y].oninput();
                     }
                 }
+            }
+
+            var suggestions = JSON.parse(sessionStorage.getItem('suggestions'));
+
+            for (var i = 0; i < 3;) {
+                // let sample ='<span class="fa fa-star"
+                //           style="font-size: 45px; color:#ff6414">
+
+                //     </span><br><br>
+                //     <b style="color:rgb(241, 236, 236); font-size:2.7em">Developer</b><br><br>
+                //     <img src="https://cdn4.iconfinder.com/data/icons/banking-and-finance/500/document-dollar-512.png"
+                //          alt="Hình công ty"
+                //          height="180"
+                //          width="180"
+                //         >';
+
+                i++;
+                let suggestion = suggestions[i]
+
+                let suggestionDiv = $('#suggest' + i)
+                suggestionDiv.empty()
+
+                $('<span>', {
+                    class: 'fa fa-star',
+                    style: 'font-size: 45px; color:#ff6414'
+                }).appendTo(suggestionDiv)
+
+                $('<br>').appendTo(suggestionDiv)
+                $('<br>').appendTo(suggestionDiv)
+                $('<br>').appendTo(suggestionDiv)
+
+
+
+                $('<b>', {
+                    text: suggestion.major.vietnamese,
+                    // text: 'Công nghệ thông tin',
+                    style: 'font-size:2em'
+                }).appendTo(suggestionDiv)
+
+                $('<br>').appendTo(suggestionDiv)
+                $('<br>').appendTo(suggestionDiv)
+                $('<br>').appendTo(suggestionDiv)
+                $('<br>').appendTo(suggestionDiv)
+
+
+
+                $('<img>', {
+                    src: suggestion.major.imageUrl,
+                    alt: suggestion.major.vietnamese,
+                    height: '180',
+                    width: '180'
+                }).appendTo(suggestionDiv)
             }
         }
     </script>
