--- a/web-ui/summary.html
+++ b/web-ui/summary.html
@@ -278,7 +278,7 @@
             </div>
 
             <div class="col-md-4 text-center banner"
-                 style="height:850px; width:320px; padding-top:2%">
+                 style="height:700px; width:280px;">
               <span style="font-size: 70px; color:#ff6414">
                 1
               </span><br><br>
