--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -119,7 +119,7 @@
                          style="border-right: 1px solid grey">
                         <div>
                             <span>Toán học:</span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -139,7 +139,7 @@
                             <span>
                                 Ngữ Văn:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -159,7 +159,7 @@
                             <span>
                                 Anh Văn:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -179,7 +179,7 @@
                             <span>
                                 Vật lý:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -219,7 +219,7 @@
                             <span>
                                 Sinh học:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -239,7 +239,7 @@
                             <span>
                                 Lịch sử:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -257,9 +257,9 @@
                         <hr>
                         <div>
                             <span>
-                                Địa lýZ:
+                                Địa lý:
                             </span>
-                            <input class="rangeValues"></input>
+                            <input class="rangeValues">
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -347,11 +347,8 @@
                 $('<br>').appendTo(suggestionDiv)
                 $('<br>').appendTo(suggestionDiv)
 
-
-
                 $('<b>', {
                     text: suggestion.major.vietnamese,
-                    // text: 'Công nghệ thông tin',
                     style: 'font-size:2em'
                 }).appendTo(suggestionDiv)
 
@@ -359,8 +356,6 @@
                 $('<br>').appendTo(suggestionDiv)
                 $('<br>').appendTo(suggestionDiv)
                 $('<br>').appendTo(suggestionDiv)
-
-
 
                 $('<img>', {
                     src: suggestion.major.imageUrl,
