--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -29,14 +29,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="js/get-suggestions.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
-
 </head>
-
 
 <body>
     <!-- Header -->
-
     <nav class="navbar navbar-expand-md navbar-dark bg-dark"
          style="height: 45px">
         <a class="navbar-brand"
@@ -64,6 +64,7 @@
         </span>
     </nav>
     <!-- End of Header -->
+
     <div class="container">
         <div id="content-result"
              class="tab-content col-md-12 folder">
@@ -289,7 +290,8 @@
                             class="btn btn-secondary"
                             data-dismiss="modal">Huỷ</button>
                     <button type="button"
-                            class="btn selected">Nhận thêm gợi ý</button>
+                            class="btn selected"
+                            onclick='getSuggestions()'>Nhận thêm gợi ý</button>
                 </div>
             </div>
         </div>
@@ -326,6 +328,7 @@
             </div>
         </div>
     </div>
+
     <script>
         function getVals() {
             // Get slider values
@@ -369,6 +372,10 @@
 
             var suggestions = JSON.parse(sessionStorage.getItem('suggestions'));
 
+            showSuggestions(suggestions)
+        }
+
+        function showSuggestions(suggestions) {
             for (var i = 0; i < 3;) {
                 i++;
                 let suggestion = suggestions[i]
