--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -315,69 +315,97 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-                    <button type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                   
                 </div>
                 <div class="modal-body ">
-                    <div class="row justify-content-center text-center">
+                    <div class="row text-center">
                         <!-- <div class="col-md-6">
                             <h2>Hiện tại</h2>
                         </div>
                         <div class="col-md-6 my-auto">
                             <h2>4 năm tới</h2>
                         </div> -->
-                        <div class="col-md-12">
+                        <div class="col-md-12 ml-3">
                             <h2>Mức lương khởi điểm</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div id="triangle"></div>
-                        <div class="banner-description text-center my-auto">
-                            <img src="./images/money-icon.png"
-                                 alt="Money Icon"
-                                 width="160"
-                                 height="160"
-                                 style="margin-top:-25px; margin-bottom:-20px;">
+                        <div class="row banner-description justify-content-between my-auto"
+                             style="font-size: 1.8em; font-style: italic">
+                            <div class="col-md-3 my-4 ml-5">
+                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            </div>
+                            <div class="col-md-2">
+                                <img src="./images/money-icon.png"
+                                     alt="Money Icon"
+                                     width="155"
+                                     height="155"
+                                     style="margin-top:-25px; margin-bottom:-20px;">
+                            </div>
+                            <div class="col-md-3 my-4 mr-5"
+                                 style="text-align: right">
+
+                                <b>Lorem ipsum</b>
+                            </div>
                         </div>
                         <div id="triangle2"></div>
                     </div>
                     <div class="row justify-content-center text-center">
 
-                        <div class="col-md-12">
+                        <div class="col-md-12 ml-3">
                             <h2>Tổng số nhân lực</h2>
                         </div>
                     </div>
                     <div class="row">
 
                         <div id="triangle"></div>
-                        <div class="banner-description text-center my-auto">
-                            <img src="./images/human-resources.png"
-                                 alt="Money Icon"
-                                 width="160"
-                                 height="160"
-                                 style="margin-top:-25px; margin-bottom:-20px;">
+                        <div class="row banner-description justify-content-between my-auto"
+                             style="font-size: 1.8em; font-style: italic">
+                            <div class="col-md-3 my-4 ml-5">
+                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            </div>
+                            <div class="col-md-2">
+                                <img src="./images/human-resources.png"
+                                     alt="Money Icon"
+                                     width="155"
+                                     height="155"
+                                     style="margin-top:-25px; margin-bottom:-20px;">
+                            </div>
+                            <div class="col-md-3 my-4 mr-5"
+                                 style="text-align: right">
+
+                                <b>Lorem ipsum</b>
+                            </div>
                         </div>
                         <div id="triangle2"></div>
 
                     </div>
                     <div class="row justify-content-center text-center">
 
-                        <div class="col-md-12">
+                        <div class="col-md-12 ml-3">
                             <h2>Thông tin bổ sung</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div id="triangle"></div>
-                        <div class="banner-description text-center my-auto">
-                            <img src="./images/additional.png"
-                                 alt="Money Icon"
-                                 width="160"
-                                 height="160"
-                                 style="margin-top:-25px; margin-bottom:-20px;">
+                        <div class="row banner-description justify-content-between my-auto"
+                             style="font-size: 1.8em; font-style: italic">
+                            <div class="col-md-3 my-4 ml-5">
+                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            </div>
+                            <div class="col-md-2">
+                                <img src="./images/additional.png"
+                                     alt="Money Icon"
+                                     width="155"
+                                     height="155"
+                                     style="margin-top:-25px; margin-bottom:-20px;">
+                            </div>
+                            <div class="col-md-3 my-4 mr-5"
+                                 style="text-align: right">
+
+                                <b>Lorem ipsum</b>
+                            </div>
                         </div>
                         <div id="triangle2"></div>
                     </div>
