Comment old code instaed of deleting it - MinhTHD

--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -475,7 +475,10 @@
                 suggestionDiv.empty()
                 suggestionDiv.attr('onclick', 'showInfoModal(' + suggestion.major.id + ')')
 
-
+                // $('<span>', {
+                //     class: 'fa fa-star',
+                //     style: 'font-size: 45px; color:#ff6414'
+                // }).appendTo(suggestionDiv)
 
                 $('<br>').appendTo(suggestionDiv)
                 $('<br>').appendTo(suggestionDiv)
