Minor update to result page - MinhTHD

--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -84,7 +84,7 @@
                 <div id="suggest2"
                      class="col-md-3 text-center result"
                      style="pointer-events: auto;">
-                    <span style="font-size: 45px; color:#ff6414">2</span>
+                    
                 </div>
                 <div id="suggest1"
                      class="col-md-3 text-center result"
@@ -101,7 +101,11 @@
                     <br>
                     <br>
                     <br>
-
+                    <img src="./images/money-icon.png"
+                    alt="Money Icon"
+                    width="180"
+                    height="180"
+                    style="margin-top:-25px; margin-bottom:-20px;">
 
 
                 </div>
